--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -10,9 +10,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: nltk in c:\\users\\ashwin\\anaconda3\\envs\\tf\\lib\\site-packages (3.5)\n",
+      "Requirement already satisfied: regex in c:\\users\\ashwin\\anaconda3\\envs\\tf\\lib\\site-packages (from nltk) (2020.11.13)\n",
       "Requirement already satisfied: click in c:\\users\\ashwin\\anaconda3\\envs\\tf\\lib\\site-packages (from nltk) (7.1.2)\n",
       "Requirement already satisfied: tqdm in c:\\users\\ashwin\\anaconda3\\envs\\tf\\lib\\site-packages (from nltk) (4.56.2)\n",
-      "Requirement already satisfied: regex in c:\\users\\ashwin\\anaconda3\\envs\\tf\\lib\\site-packages (from nltk) (2020.11.13)\n",
       "Requirement already satisfied: joblib in c:\\users\\ashwin\\anaconda3\\envs\\tf\\lib\\site-packages (from nltk) (1.0.0)\n"
      ]
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -139,74 +139,94 @@
        "      <td>gallant</td>\n",
        "      <td>a man who is much concerned with his dress and...</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>sweetheart</td>\n",
-       "      <td>a person loved by another person</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>run</td>\n",
-       "      <td>a score in baseball made by a runner touching ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>monkish</td>\n",
-       "      <td>befitting a monk; inclined to self-denial</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>orthodox</td>\n",
-       "      <td>of or pertaining to or characteristic of Judaism</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>erosive</td>\n",
-       "      <td>wearing away by friction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>frivolity</td>\n",
-       "      <td>the trait of being frivolous; not serious or s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>stockton</td>\n",
-       "      <td>United States writer (1834-1902)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>arousal</td>\n",
-       "      <td>the act of arousing</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         words                                        description\n",
-       "0        kitty                 the combined stakes of the betters\n",
-       "1       lookup  an operation that determines whether one or mo...\n",
-       "2       otiose  serving no useful purpose; having no excuse fo...\n",
-       "3      gallant  a man who is much concerned with his dress and...\n",
-       "4   sweetheart                   a person loved by another person\n",
-       "5          run  a score in baseball made by a runner touching ...\n",
-       "6      monkish          befitting a monk; inclined to self-denial\n",
-       "7     orthodox   of or pertaining to or characteristic of Judaism\n",
-       "8      erosive                           wearing away by friction\n",
-       "9    frivolity  the trait of being frivolous; not serious or s...\n",
-       "10    stockton                   United States writer (1834-1902)\n",
-       "11     arousal                                the act of arousing"
+       "     words                                        description\n",
+       "0    kitty                 the combined stakes of the betters\n",
+       "1   lookup  an operation that determines whether one or mo...\n",
+       "2   otiose  serving no useful purpose; having no excuse fo...\n",
+       "3  gallant  a man who is much concerned with his dress and..."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head(12)"
+    "data.head(4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "\n",
+    "from nltk.corpus import stopwords  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class PreProcess:\n",
+    "    tokenizer = Tokenizer(oov_token=\"<OOV>\")\n",
+    "    def __init__(self,data):\n",
+    "        self.data = data\n",
+    "        self.remove_stop_words()\n",
+    "        self.tokenizer.fit_on_texts(data)\n",
+    "        \n",
+    "    def remove_stop_words(self):\n",
+    "        stop_words = set(stopwords.words('english'))\n",
+    "        for i in range(len(self.data)):\n",
+    "            sent_lst = list(self.data[i].split(\" \"))\n",
+    "            sent_lst = filter(lambda x: x not in stop_words, sent_lst)\n",
+    "            self.data[i] = ' '.join([str(wrd) for wrd in sent_lst])\n",
+    "            \n",
+    "    def tokenize(self):\n",
+    "        seq = self.tokenizer.texts_to_sequences(self.data)\n",
+    "        seq_padded = pad_sequences(seq)\n",
+    "        return(seq_padded)\n",
+    "    \n",
+    "    def get_word_index(self):\n",
+    "        return(self.tokenizer.word_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre_pro_X = PreProcess(data['description'])\n",
+    "X = np.array(pre_pro_X.tokenize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pre_pro_y = PreProcess(data['words'])\n",
+    "y = np.array(pre_pro_y.tokenize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
